---
source: web/book/tests/documentation/book.rs
expression: "from artists\nselect {\n  escaped = \"\\\"hello world\\\"\",\n  other   = '\"hello world\"',\n  triple  = \"\"\"I said \"hello world\"!\"\"\",\n}\n"
---
SELECT
  '"hello world"' AS escaped,
  '"hello world"' AS other,
  'I said "hello world"!' AS triple
FROM
  artists

